import com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer

plugins {
    id 'java'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

build.dependsOn shadowJar

shadowJar {
    transform Log4j2PluginsCacheFileTransformer
    archiveClassifier.set("")

    manifest {
        attributes 'Main-Class': 'top.rymc.phira.main.Server'
        attributes 'Multi-Release': 'true'
    }
}

jar {
    enabled = false
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-parameters']
}

group = 'top.rymc'
version = '1.0.0-dev-2026703-03'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url 'https://maven.meteordev.org/releases' }
}

dependencies {
    implementation project(':jphira-mp-logger')
    implementation 'com.github.lRENyaaa:jphira-mp-protocol:2.3.0'

    implementation 'com.google.code.gson:gson:2.12.1'
    implementation 'commons-codec:commons-codec:1.16.0'
    implementation 'com.github.luben:zstd-jni:1.5.6-6'

    implementation 'com.google.guava:guava:33.2.0-jre'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.3'

    implementation 'io.netty:netty-common:4.2.3.Final'
    implementation 'io.netty:netty-handler:4.2.3.Final'
    implementation 'io.netty:netty-codec-haproxy:4.2.3.Final'

    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-api:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-iostreams:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-jul:2.25.4'

    implementation 'net.minecrell:terminalconsoleappender:1.3.0'
    implementation 'org.jline:jline-terminal-jni:4.1.0'
    implementation 'com.lmax:disruptor:4.0.0'

    implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'

    compileOnly 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'

    implementation 'meteordevelopment:orbit:0.2.3'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testImplementation 'org.mockito:mockito-core:5.7.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.awaitility:awaitility:4.2.0'

}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            project.shadow.component(it)

            groupId = project.group
            artifactId = 'jphira-mp'
            version = project.version
        }
    }
}


tasks.withType(PublishToMavenLocal).configureEach {
    dependsOn(tasks.shadowJar)
}

tasks.withType(PublishToMavenRepository).configureEach {
    dependsOn(tasks.shadowJar)
}